EnemyDownApp 2nd commit Disable toolchain for EC2 execution

--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,13 @@ group = 'plugin'
 version = '0.0.1-SNAPSHOT'
 description = 'Demo project for Spring Boot'
 
+/** EC2がJava17を見つけられないため、一時的にtoolchainを無効化
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
+**/
 
 configurations {
 	compileOnly {
